--- a/Rollossus/Config/DefaultInput.ini
+++ b/Rollossus/Config/DefaultInput.ini
@@ -68,7 +68,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="Boost",Key=X,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Brake",Key=Z,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Boost",Key=O,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Boost",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Boost",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=Touch1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -93,6 +93,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
 -AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
+-AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
+-AxisMappings=(AxisName="LookUp",Key=None,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftStick_Up,Scale=1.000000)
@@ -107,10 +109,13 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
 ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
+
 
