--- a/Rollossus/Rollossus.uproject
+++ b/Rollossus/Rollossus.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{019A5844-462B-26FF-FCCF-F9A21B89605C}",
+	"EngineAssociation": "4.17",
 	"Category": "",
 	"Description": ""
 }
